src/test/ui/type/type-mismatch-same-crate-name.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/type-mismatch-same-crate-name.rs:16:9
   |
LL |         a::try_foo(foo2);
   |         ^^^^^^^^^^^----^
   |                    |
   |                    expected `main::a::Foo`, found `main::a::Foo`
   |
help: provide an argument of the correct type
   |
LL |         ({main::a::Foo});
   |         ^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/type-mismatch-same-crate-name.rs:20:9
   |
LL |         a::try_bar(bar2);
   |         ^^^^^^^^^^^----^
   |                    |
   |                    expected `Box<(dyn main::a::Bar + 'static)>`, found `Box<dyn main::a::Bar>`
   |
help: provide an argument of the correct type
   |
LL |         ({Box<(dyn main::a::Bar + 'static)>});
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
